--- a/Clase09/index.html
+++ b/Clase09/index.html
@@ -29,5 +29,19 @@
 
     </div>
 
+    <form id="formulario">
+        <input id="input1" type="text" placeholder="Tu nombre">
+        <small id="error-nombre">El nombre es demasiado corto</small>
+        <input id="input2" type="text" placeholder="Tu apellido">
+        <small id="error-apellido">El apellido es demasiado corto</small>
+
+        <select name="destino" id="destino">
+            <option value="paris">Paris</option>
+            <option value="alemania">Alemania</option>
+            <option value="mongolia">Mongolia</option>
+        </select>
+
+        <button id="btn-submit" type="submit">Enviar</button>
+    </form>
 </body>
 </html>
