--- a/Clase13/index.html
+++ b/Clase13/index.html
@@ -17,6 +17,11 @@
     <h1>Clase 13 - jQuery</h1>
     <hr>
 
+    <button id="swal">SWAL</button>
+
+
+    <div id="square"></div>
+
     <button id="show">SHOW</button>
     <button id="hide">HIDE</button>
 
@@ -43,5 +48,14 @@
         <h3>Menú acorderon</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, reprehenderit animi, eum eius nisi, iure asperiores saepe voluptatum at atque placeat maxime debitis nostrum alias quam vel! Laboriosam, ut qui!</p>
     </div>
+
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium ducimus odio deleniti eos voluptate impedit aperiam possimus magni quibusdam dicta praesentium voluptatum, fuga non magnam? Explicabo esse facere at incidunt?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium ducimus odio deleniti eos voluptate impedit aperiam possimus magni quibusdam dicta praesentium voluptatum, fuga non magnam? Explicabo esse facere at incidunt?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium ducimus odio deleniti eos voluptate impedit aperiam possimus magni quibusdam dicta praesentium voluptatum, fuga non magnam? Explicabo esse facere at incidunt?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium ducimus odio deleniti eos voluptate impedit aperiam possimus magni quibusdam dicta praesentium voluptatum, fuga non magnam? Explicabo esse facere at incidunt?</p>
+    </section>
+    
+
+
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
